api-gateway changes synced with other micro services i.e. auth-service and profile-service
